generated/checker-for-evaluation/generated/test-Out-of-Bound-ccc514b7e7acbd301219cbaec0fc0bfe5741acee/build_logs/6/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:18:17: error: ‘taint’ is not a namespace-name
   18 | using namespace taint;
      |                 ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘bool {anonymous}::ForLoopVisitor::VisitForStmt(clang::ForStmt*)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:126:65: error: no matching function for call to ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BugType&, llvm::StringRef, clang::SourceLocation&)’
  126 |       BugReport *R = new BasicBugReport(*BT, SB.str(), ReportLoc);
      |                                                                 ^
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:6:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:256:3: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BugType&, llvm::StringRef, clang::ento::PathDiagnosticLocation)’
  256 |   BasicBugReport(const BugType &bt, StringRef desc, PathDiagnosticLocation l)
      |   ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:256:76: note:   no known conversion for argument 3 from ‘clang::SourceLocation’ to ‘clang::ento::PathDiagnosticLocation’
  256 |   BasicBugReport(const BugType &bt, StringRef desc, PathDiagnosticLocation l)
      |                                                     ~~~~~~~~~~~~~~~~~~~~~~~^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(const clang::ento::BasicBugReport&)’
  251 | class BasicBugReport : public BugReport {
      |       ^~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note: candidate: ‘clang::ento::BasicBugReport::BasicBugReport(clang::ento::BasicBugReport&&)’
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:251:7: note:   candidate expects 1 argument, 3 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:127:10: error: ‘class clang::ento::BugReporter’ has no member named ‘EmitReport’; did you mean ‘emitReport’?
  127 |       BR.EmitReport(R);
      |          ^~~~~~~~~~
      |          emitReport
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:125:13: warning: unused variable ‘BRPtr’ [-Wunused-variable]
  125 |       auto *BRPtr = const_cast<BugReporter*>(&BR);
      |             ^~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
